sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.error
AlgBubbleSort1: error: not found: value bubbleSort
		bubbleSort();
                ^AlgBubbleSort1:2: error: not found: value public
public void bubbleSort()  {
^